# qml-xwayland

./: .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  qml-xwayland.qbs
.github/workflows/: build.yml
.github/workflows/scripts/: build-deps
.travis/: build.sh
cmake/: FindXcursor.cmake
src/xwayland/: CMakeLists.txt  sigwatch.cpp  xcbcursors.cpp  xwayland.cpp  xwayland.h  xwaylandserver.cpp  xwaylandserver.h
